dataset/local/cp_disallow_cri_sock_mount/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-cri-sock-mount
policies:
- ../disallow-cri-sock-mount.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: disallow-container-sock-mounts
  resources:
  - pod-with-docker-sock-mount
  result: fail
- kind: Pod
  policy: disallow-container-sock-mounts
  resources:
  - goodpod01
  result: pass
